# CloudArt

./: .gitignore  CMakeLists.txt  output.txt  readme.md
resources/: resources.qrc
resources/workflows/: Z-Image文生图.json  i2i_render.json  i2i_vision.json  高清修复.json
src/: CMakeLists.txt  main.cpp
src/Core/: WorkflowManager.cpp  WorkflowManager.h
src/Database/: DatabaseManager.cpp  DatabaseManager.h
src/Model/: DataModels.h  WorkflowTypes.h
src/Network/: ComfyApiService.cpp  ComfyApiService.h
src/Ui/: MainWindow.cpp  MainWindow.h
src/Ui/Components/: ChatArea.cpp  ChatArea.h  ChatBubble.cpp  ChatBubble.h  HistoryGallery.cpp  HistoryGallery.h  ImageViewer.cpp  ImageViewer.h  InputPanel.cpp  InputPanel.h  ReferencePopup.cpp  ReferencePopup.h  SessionItem.cpp  SessionItem.h  SessionList.cpp  SessionList.h  SettingsDialog.cpp  SettingsDialog.h  SidebarControl.cpp  SidebarControl.h  WorkflowCard.cpp  WorkflowCard.h  WorkflowSelector.cpp  WorkflowSelector.h
